--- a/day1/index.html
+++ b/day1/index.html
@@ -6,23 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FrontendDay1</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+  rel="stylesheet" 
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+  crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <center>
-  <h1 id="h1">Hello teman-teman!</h1>
-  <div class="card">
-      <img src="https://www.ccarprice.com/products/BMW-i8-Coupe-2020.jpg">
+  <h1>Hello teman-teman!</h1>
+  <h2>Hello teman-teman!</h2>
+  <div>
+    <img alt="rusak" src="https://www.ccarprice.com/products/BMW-i8-Coupe-2020.jpg">
   </div>
-  <br>
-  <div class="card">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="card separator">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse similique voluptatibus, dolor, sit sed quae asperiores distinctio facere est eligendi assumenda? Amet odio sed cupiditate sint facilis, natus eos quibusdam corrupti suscipit animi labore et quos? Nam, distinctio, labore eius quam magnam harum aliquam minima enim animi assumenda quasi dolores iste laudantium debitis iure minus asperiores nulla est? Tempore, omnis nisi! Cumque, officia! Mollitia, reprehenderit pariatur! Voluptatum qui suscipit assumenda cum earum, quos magni unde?
+    </div>
+    <span class="card separator">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </span>
+    <div class="card separator">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
   </div>
-  <span class="card">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-  </span>
-  <div class="black-card">
+  <div class="black-card separator">
     <div class="black-card-title">Keynotes</div>
     <div class="black-card-subtitle">Subtitle</div>
   </div>
