--- a/day2/demo/demo.html
+++ b/day2/demo/demo.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="demostyle.css">
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -27,7 +27,7 @@
       <a href="#home">Home</a>
       <a href="#band">Band</a>
       <a href="#tour">Tour</a>
-      <a href="#">Contact</a>
+      <a href="contact.html">Contact</a>
     </div>
 
     <div class="search-wrapper">
@@ -128,7 +128,7 @@
       </div>
     </div>
   </section>
-  <section>Contact</section>
+  <section><center><h1>Contact</h1></center></section>
 </body>
 
 </html>
