--- a/day1/tugas/webpage.html
+++ b/day1/tugas/webpage.html
@@ -26,17 +26,20 @@
         <div class="item">
             
             <div onclick="alert(`nothing`)" class="icon"></div>
-            <div onclick="alert(`nothing`)" class="cart">GO BACK</div>
+            <div onclick="alert(`nothing`)" class="cart">go back</div>
             
-            <div id="color">Color</div>
-            <div id="name">Item Type / Name</div>
+            <div class="product-name">
+                <span id="color">Color</span>
+                <br>
+                <span id="name">Item Type / Name</span>
+            </div>
             <div id="price">$149.950</div>
-            <div id="desc">
+            <p id="desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Consequatur ad expedita non. 
                 Dolor harum voluptate repudiandae ab doloribus, vel esse cupiditate numquam, 
                 nisi reprehenderit iste modi officiis ducimus unde dolorem.
-            </div>
+            </p>
             <div id="size">
                 <span id="mode">Mode :</span>
                 <span class="mode">ExtraSport</span>
